--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BP | Login</title>
-
+    <link rel="shortcut icon" href="./assets/images/svg/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/global.css">
     <link rel="stylesheet" href="./assets/css/login.css">
 
@@ -53,7 +53,7 @@
             </div>
 
             <button type="submit" class="loginBtn">Login</button>
-            <p>Don't have an account? <a href="register.html">Register here!</a></p>
+            <p class="changeForm">Don't have an account? <a href="register.html">Register here!</a></p>
         </form>
     </main>
 
