--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BP | Register</title>
-
+    <link rel="shortcut icon" href="./assets/images/svg/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/register.css">
     <link rel="stylesheet" href="./assets/css/global.css">
 
@@ -55,7 +55,7 @@
             </div>
 
             <button type="submit" class="loginBtn">Register</button>
-            <p>Already have and account? <a href="login.html">Login</a></p>
+            <p class="changeForm">Already have and account? <a href="login.html">Login</a></p>
         </form>
     </main>
 
