--- a/register.html
+++ b/register.html
@@ -33,7 +33,7 @@
 
     <main data-aos="zoom-in">
         <h2>Welcome to BP Café!</h2>
-        <form class="loginForm" method="post" action="login.php">
+        <form class="loginForm" method="post" action="register.php">
             <div class="inputGrp">
                 <label for="name">Name</label>
                 <input type="text" name="userName" id="name">
@@ -54,7 +54,7 @@
                 </div>
             </div>
 
-            <button type="submit" class="loginBtn">Register</button>
+            <button type="submit" name="registerBtn" class="loginBtn">Register</button>
             <p class="changeForm">Already have and account? <a href="login.html">Login</a></p>
         </form>
     </main>
